--- a/client/src/components/Manubar.css
+++ b/client/src/components/Manubar.css
@@ -1,45 +1,29 @@
 
 .navbar {
-    background-color: #333;
     display: flex;
     padding: 24px 48px;
-    color: rgb(255, 255, 255);
-    background-color: rgb(0, 0, 0);
+    color: rgb(26, 25, 25);
+    background-color: rgb(43, 188, 255);
+    border-radius: 20px; 
+    
 }
     
 .navbar a {
     float: center;
     font-size: 16px;
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
     
 .navbar a:hover,.subnav:hover .subnavbtn {
-    background-color: red;
+    background-color: rgb(255, 255, 255);
 }
 
-.navbar {
-    background-color: #333;
-    display: flex;
-    padding: 24px 48px;
-    color: rgb(255, 255, 255);
-    background-color: rgb(0, 0, 0);
-}
+
     
-.navbar a {
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-    
-.navbar a:hover,.subnav:hover .subnavbtn {
-    background-color: red;
-}
+
 
 @media screen and (max-width: 600px) {
     .navbar a  {
