--- a/client/src/components/Manubar.css
+++ b/client/src/components/Manubar.css
@@ -1,28 +1,98 @@
 
-.navbar {
+/* .navbar {
     display: flex;
+    align-content: flex space-between;
     padding: 24px 48px;
     color: rgb(26, 25, 25);
     background-color: rgb(43, 188, 255);
-    border-radius: 20px; 
+    border-radius: 5px; 
     
-}
+    
+} */
     
 .navbar a {
     float: center;
-    font-size: 16px;
+    font-size: 20px;
     color: rgb(0, 0, 0);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    Fira Sans,
+    Droid Sans,
+    Helvetica Neue,
+    sans-serif;
 }
     
-.navbar a:hover,.subnav:hover .subnavbtn {
+/* .navbar a:hover,.subnav:hover .subnavbtn {
     background-color: rgb(255, 255, 255);
+} */
+
+/* .navbar {
+    background-color: #333;
+    overflow: hidden;
+} */
+
+/* .navbar a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+} */
+
+/* .navbar a:hover {
+    background-color: #ddd;
+    color: black;
+} */
+
+.navbar {
+    background-color: #63a6f8;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
 }
 
+.navbar a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+}
 
-    
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.navbarleft {
+    display: flex;
+}
+
+.navbarright {
+    display: flex; /* Convert to flex container */
+    align-items: end; /* Align items vertically center */
+    padding: 15px;
+    color: white;
+    justify-content: flex-end; /* Align items to the right */
+}
+
+/* Clear floats after the navbar */
+.navbar::after {
+    content: "";
+    clear: both;
+    display: table;
+} 
 
 
 @media screen and (max-width: 600px) {
