--- a/client/src/pages/dashboard.css
+++ b/client/src/pages/dashboard.css
@@ -10,7 +10,7 @@ mainContainer {
 .titleContainer {
   display: flex;
   flex-direction: column;
-  font-size: 64px;
+  font-size: 40px;
   font-weight: bolder;
   align-items: center;
   justify-content: center;
@@ -60,8 +60,10 @@ mainContainer {
   width: 400px;
   font-size: large;
   border-radius: 8px;
-  border: 1px solid grey;
+  border: 1px solid rgb(105, 103, 103);
   padding-left: 8px;
+  border-radius: 50px;
+  padding: 20px;
 }
 
 html,
@@ -116,6 +118,24 @@ input[type='button'] {
   font-size: 24px;
   border-radius: 8px;
   cursor: pointer;
+}
+.content {
+  flex: 1;
+}
+.bottom-box {
+  background-color: #969696;
+  height: 100px; 
+  border-radius: 8px;
+  margin: 10px;
+  padding: 20px;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s;
+
+}
+.bottom-box:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 /* 
 * {
