--- a/client/src/components/Manubar.css
+++ b/client/src/components/Manubar.css
@@ -57,14 +57,15 @@
 .navbar {
     background-color: #63a6f8;
     overflow: hidden;
-    display: flex;
-    justify-content: space-between;
+    padding: 10px;
+    /* display: flex; */
+   
 }
 
 .navbar a {
     float: left;
     display: block;
-    color: white;
+    color: rgb(80, 80, 80);
     text-align: center;
     padding: 14px 20px;
     text-decoration: none;
@@ -76,7 +77,8 @@
 }
 
 .navbarleft {
-    display: flex;
+    display: flex-start;
+    justify-content: flex-start;
 }
 
 .navbarright {
