--- a/client/src/pages/educationPages/1103/earlyChildhood-1103.css
+++ b/client/src/pages/educationPages/1103/earlyChildhood-1103.css
@@ -133,7 +133,21 @@
   color: rgb(0, 0, 0);
   padding: 10px;
   border-radius: 8px;
-  font-size: 20px;
+  font-size: 30px;
+  text-align: center;
+  padding: 10px;
+
+}
+.title-header {
+  display: flex;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+  padding: 10px;
+  border-radius: 8px;
+  font-size: 30px;
+  text-align: center;
+  padding-left: 100px;
+  justify-content: center;
 
 }
 
@@ -142,7 +156,8 @@
     border-radius: 40px;
     height: 100px;
     width: auto;
-    padding: 10px;
+    padding: 15px;
+    margin: 10px;
     /* padding: 20px; */
     /* margin: 10px; */
     text-align: center;
