--- a/client/src/pages/mainPage/LoginPage.css
+++ b/client/src/pages/mainPage/LoginPage.css
@@ -47,6 +47,9 @@ mainContainer {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-size: 25px;
+
+
 }
 
 .inputContainer > .errorLabel {
